[package]
name = "mirror_upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.26", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
miette = { version = "5.6.0", features = ["fancy"] }
async-trait = "0.1.67"
bytes = "1.4.0"
regex = "1.7.1"
toml = "0.7.3"
thiserror = "1.0.40"
